@@ -695,3 +695,4 @@
 - v.5.9.1 (2025-XX-YY)
     - 折り返しをしない文字列リテラルの最大長を400にする。
     - UTF-16のときのみ、文字列リテラルの折り返しをする。
+    - 検索を修正 (Ctrl+F)。
