@@ -352,3 +352,4 @@
 - v.5.9.1 (2025-XX-YY)
     - 이제 줄바꿈되지 않은 문자열 리터럴의 최대 길이는 400입니다.
     - 문자열 리터럴은 UTF-16 RC에서만 줄바꿈됩니다.
+    - Fixed Search (Ctrl+F).
